--- a/src/main/webapp/core/css/controls.css
+++ b/src/main/webapp/core/css/controls.css
@@ -1,3 +1,25 @@
+.buttonControl{
+	cursor: pointer;
+	font-family: Calibri;
+	font-size: 10pt;
+	min-width: 7em;
+} 
+
+.labelControl {
+	font-family: Calibri;
+	font-size: 10pt;
+}
+
+.checkBoxControl input{
+	cursor: pointer;
+	font-size: 10pt;	
+}
+
+.checkBoxControl span{
+	font-family: Calibri;
+	font-size: 10pt;	
+}
+
 /* horizontalLayoutControl */
 .horizontalLayoutItem{
 	float: left;
@@ -91,6 +113,8 @@
 	overflow-y: auto;
 	border: 1px solid gray;	
 	background-color: white;
+	padding: 1em;
+	min-height: 10em;	
 }
 
 .tabControlSelectedHeadersItem{
